<resources>
    <string name="app_name">Smart4People</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_splash_fragment">Hello Splash Screen</string>
    <string name="hello_home_fragment">Home Screen</string>
    <string name="user_email">user email@gmai.com</string>
    <string name="email_slected">email selected</string>
    <string name="fav_selected">fav selected</string>
    <string name="direction_selected">direction selected</string>
    <string name="email">email</string>
    <string name="favourites">Favourites</string>
    <string name="directions">Directions</string>
    <string name="action_signup">SignUp</string>
    <string name="msg_don_t_have_an_account">Don\'t have an account?</string>
    <string name="action_login">Login</string>
    <string name="msg_password">Password</string>
    <string name="msg_email">Username</string>
    <string name="msg_please_wait">Please Wait...</string>
    <string name="msg_please_connect_to_internet">Please connect to Internet</string>
    <string name="error_valid_email">Please enter valid username</string>
    <string name="error_valid_password">Please enter valid password</string>
    <string name="logout">LOGOUT</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="self_assesment">SELF ASSESMENT</string>
    <string name="hours_3">3 Hour</string>
    <string name="hours_6">6 Hours</string>
    <string name="hours_12">12 Hours</string>
    <string name="hours_24">24 Hours</string>
    <string name="date_range">Date Range</string>
    <string name="msg_receovered">Recovered</string>
    <string name="msg_critical">Critical</string>
    <string name="under_control">Under Control</string>
    <string name="msg_ward_no">Ward No. </string>
    <string name="msg_bed_no">Bed No. </string>
    <string name="msg_ward_number">Ward Number</string>
    <string name="msg_addmitted_since">Admitted Since</string>
    <string name="msg_biosensor_id">Biosensor ID</string>
    <string name="msg_bed_number">Bed Number</string>
    <string name="msg_gender">Gender</string>
    <string name="msg_relay_id">Relay ID</string>
    <string name="msg_respiration_rate">Respiratory</string>
    <string name="unit_bpm">BPM</string>
    <string name="msg_heart_rate">Heart Rate</string>
    <string name="unit_heart_rate">BPM</string>
    <string name="unit_respiration">BrPM</string>
    <string name="msg_body_temperature">Body Temperature</string>
    <string name="unit_body_temp">°F</string>
    <string name="patient_details">PATIENT DETAILS</string>
    <string name="title_search_patient">SEARCH PATIENTS</string>
    <string name="please_select_start_date_and_end_date_to_view_the_patient_data">Select Date Range</string>
    <string name="title_view_statics">VIEW STATISTICS</string>
    <string name="select_bed_number">Select Bed Number</string>
    <string name="select_ward_no">Select Ward Number</string>
    <string name="sp02">Oxygen Saturation(Spo2) Reading</string>

    <string name="blood_pressure_reading">Blood Pressure Reading</string>
    <string name="sys_mmhg">SYS(mmHg)</string>
    <string name="dia_mmhg">DIA(mmHg)</string>

    <string name="b_p_reading">CAPTURE VITALS</string>

    <string name="error_valid_bed_number">Please enter valid bed number</string>
    <string name="error_valid_ward_no">Please enter valid ward no</string>
    <string name="error_valid_sys">Please enter valid SYS</string>
    <string name="error_valid_dia">Please enter valid DIA</string>
    <string name="action_submit">SUBMIT</string>
    <string name="text_temprature">Temperature</string>
    <string name="text_time">Time</string>
    <string name="action_notification">Notifications</string>
    <string name="title_health_alert">HEALTH ALERT</string>
    <string name="title_body_temp">BODY TEMPERATURE (°F)</string>
    <string name="title_heart_rate">HEART RATE(BPM)</string>
    <string name="title_respiration_rate">RESPIRATION RATE(BrPM)</string>
    <string name="title_ecg_graph">ELECTRO CARDIO SIGNAL (ECG)</string>
    <string name="no_internet">No Internet</string>
    <string name="posture_sleeping">sleeping</string>
    <string name="posture_sitting">sitting</string>
    <string name="posture_standing">standing</string>
    <string name="posture_lying">lying</string>
    <string name="posture_motion">motion</string>

    <string name="graph_time">HH:mm</string>
    <string name="timezone">UTC</string>
    <string name="msg_please_connect">Please connect to internet for continue</string>
    <string name="msg_base_url">BASE URL</string>
    <string name="set_base_url">SET BASE URL</string>
    <string name="action_sos">SOS</string>
    <string name="help">HELP</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="app_name_smart">SMART4PEOPLE</string>
    <string name="spo2_oxygen_saturation">SpO2 Oxygen Saturation</string>
    <string name="spo2">SpO2%</string>
    <string name="action_save">save</string>
    <string name="action_cancel">Cancel</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="msg_blood_pressure">Blood Pressure</string>
    <string name="msg_oxygen_saturation">Oxygen Saturation</string>
    <string name="err_spo2">Please enter valid spO2</string>
    <string name="err_sys">Please enter valid SYS</string>
    <string name="err_sys_greater">Systolic value cannot be greater then or equal to Diastolic value</string>
    <string name="level_of_pain">LEVEL OF PAIN</string>
    <string name="assess_the_intensity_of_pain">Assess the intensity of pain</string>
    <string name="zero">0</string>
    <string name="no_pain">No Pain</string>
    <string name="severe_pain">Severe Pain</string>
    <string name="ten">10</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="msg_mobile_number">Mobile Number</string>
    <string name="msg_emergency_contact_number">Emergency Contact Number</string>
    <string name="error_valid_mobile">Please enter valid Mobile number</string>
    <string name="error_valid_emergency_contact_number">Please enter valid Emergency Contact Number</string>
    <string name="bp_unit"> mmHg</string>
    <string name="spo2_unit"> %SpO2</string>
    <string name="you_are_not_being_monitered">You are not being monitored, please apply a patch on your body.</string>
    <string name="emergency_contact_updated">Emergency contact Number successfully updated.</string>
    <string name="err_spo2_100">Spo2 % should not be greater than 100</string>
    <string name="no_record_found">No record found</string>
    <string name="ecg_temp_data">
       { ECG_DATA:[
[
"TsECG" : 12312002560,
"ECG0" : [0,2.5,-2.5,-1.4,5,8,3,-8,-1.2,10,-10,-8,15,13,-9.5,12,-18,-9,9,-20,-24,28,11,25,-20,-13,13,14,-14,21,-31,33,-17,11],
"ECG1" : [0,2,2.5,3,5,7,8.5,10,12,13.5,15,17,18,19.2,20,23,30,33,25.7,38,40,43,45,46,50,51.6,52,53,56,58,60,62,70,77],
"HR":60,
"Respiration":[2736,2285,1887,1654,1351,924,572,286,-69,-384,-559,-771,-1130,-1506,-1796,-2017,-2192,-2404,-2682,-2867,-2880,-2890,-3018,-3164,-3269,-3339,-3340,-3257,-3104,-2872,-2646,-2501,-2280,-1914,-1596,-1328,-906,-375,30,246,374,578,925,1321,1695,2020,2208,2322,2557,2843,2949,2921,3001,3211,3374,3376,3211,2869,2438,2188,2230,2280,2023,1506,1048,856,815,713,488,164,-270,-814,-1330,-1636,-1744,-1811,-1872,-1934,-2103,-2415,-2764,-3001,-3028,-2960,-2982,-3007,-2960,-3035,-3197,-3110,-2800,-2627,-2570,-2239,-1635,-1217,-1144,-1016,-569,-95,146,367,805,1333,1742,1980,2081,2153,2285,2466,2696,2962,3095,3020,2956,3026,3059,2946,2807,2720,2673,2636,2471,2053,1544,1246,1129,895,491,152,-36,-208,-403,-616,-960,-1427,-1774,-1919,-2103,-2465,-2769,-2815,-2810,-2932,-2990,-2929,-2997,-3182,-3184,-2947,-2705],
"Temperature":"0",
"PatchId":"SIB99",
"RR_OUT":0,
"POSTURE":0

]
]
        }
    </string>
</resources>