<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/tab_background">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvHeading"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_margin="@dimen/padding_20dp"
    android:textSize="@dimen/text_size_15sp"
    android:fontFamily="@font/roboto_bold"
    android:textColor="@color/dashboard_text_color"
    android:text="@string/spo2_oxygen_saturation"/>
    <ImageView
        android:layout_width="@dimen/text_size_15sp"
        android:layout_height="@dimen/text_size_15sp"
        android:id="@+id/cancel_action"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/padding_20dp"
        android:background="@color/tab_background"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/ab_cross_login"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_spo2"
        style="@style/Widget.Design.TextInputLayoutPD"
        android:theme="@style/TextInputLayoutAppearancePD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20dp"
        android:layout_marginEnd="@dimen/padding_20dp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/spo2"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textColor="@color/patient_details_text"
            android:textColorHint="@color/patient_details_text"
            android:textSize="@dimen/field_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/saveSpO2"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_margin="@dimen/padding_20dp"
    app:layout_constraintTop_toBottomOf="@+id/et_spo2"
    android:fontFamily="@font/roboto_regular"
    android:textSize="@dimen/text_size_15sp"
    android:text="@string/action_save"
    android:textAllCaps="true"
    android:background="@drawable/title_bg"
    android:paddingStart="@dimen/padding_20dp"
    android:paddingEnd="@dimen/padding_20dp"
    android:paddingBottom="@dimen/margin_10dp"
    android:paddingTop="@dimen/margin_10dp"
    android:textColor="@color/white"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelSpO2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/padding_20dp"
        app:layout_constraintEnd_toStartOf="@+id/saveSpO2"
        app:layout_constraintTop_toBottomOf="@+id/et_spo2"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/text_size_15sp"
        android:text="@string/action_cancel"
        android:textAllCaps="true"
        android:paddingStart="@dimen/padding_20dp"
        android:paddingEnd="@dimen/padding_20dp"
        android:paddingBottom="@dimen/margin_10dp"
        android:paddingTop="@dimen/margin_10dp"
        android:textColor="@color/red"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveSpO2"
        android:fontFamily="@font/roboto_regular"
        android:textAllCaps="true"
        android:textColor="@color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>