<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login_bg">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_emailLogin"
        style="@style/Widget.Design.TextInputLayout1"
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20dp"
        android:layout_marginTop="@dimen/padding_20dp"
        android:layout_marginEnd="@dimen/padding_20dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/msg_email"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/white_70"
            android:textColorHint="@color/white_70"
            android:textSize="@dimen/field_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_passwordLogin"
        style="@style/Widget.Design.TextInputLayout1"
        android:theme="@style/TextInputLayoutAppearance"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_20dp"
        android:layout_marginEnd="@dimen/padding_20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emailLogin"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/msg_password"
            android:inputType="textWebPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/field_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20dp"
        android:layout_marginTop="@dimen/padding_20dp"
        android:layout_marginEnd="@dimen/padding_20dp"
        android:background="@drawable/btn_signup_bg"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:text="@string/action_login"
        android:textColor="@color/drawer_bg"
        android:textSize="@dimen/button_text_size"

        app:layout_constraintTop_toBottomOf="@+id/text_passwordLogin" />


    <ImageView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margint_top_app_name"
        android:background="@drawable/login_logo"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>